--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="16dp"
-        android:background="@drawable/gradient_bg">
+        android:paddingBottom="16dp">
 
         <!-- Toolbar (상단 고정) -->
         <androidx.appcompat.widget.Toolbar
@@ -86,39 +85,53 @@
 
 
         <!-- 텍스트 섹션 -->
-        <TextView
-            android:id="@+id/greeting_text"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="안녕하세요, 유저님!\n오늘은 어떤 책을 시작해볼까요?"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
-            android:layout_margin="16dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="나의 활동"
-            android:textSize="18sp"
-            android:textColor="@color/white"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"/>
+            android:background="@drawable/gradient_bg">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="이번 달도 Ttt.와 즐거운 독서 라이프 즐겨봐요!"
-            android:textSize="16sp"
-            android:textColor="#C2C4C8E0"
-            android:layout_marginStart="16dp"/>
+            <TextView
+                android:id="@+id/greeting_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="안녕하세요, 유저님!\n오늘은 어떤 책을 시작해볼까요?"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="나의 활동"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/greeting_text" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="이번 달도 Ttt.와 즐거운 독서 라이프 즐겨봐요!"
+                android:textColor="#C2C4C8E0"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- "나의 활동" 카드뷰 -->
         <include
-            layout="@layout/activity_card"
             android:id="@+id/activity_card"
+            layout="@layout/activity_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp" />
 
         <TextView
             android:id="@+id/category_title1"
