--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
         android:id="@+id/id_label"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="200dp"
         android:fontFamily="@font/pretendard_medium"
         android:text="아이디(이메일)"
@@ -40,7 +41,10 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white_10"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/background_login_input"
+        android:backgroundTint="@color/white_10"
+        android:paddingStart="12dp"
         android:hint="Ttt@naver.com"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
@@ -56,7 +60,8 @@
         android:id="@+id/pw_label"
         android:layout_width="49dp"
         android:layout_height="20dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/pretendard_medium"
         android:text="비밀번호"
         android:textColor="@color/white"
@@ -72,16 +77,18 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white_10"
+        android:background="@drawable/background_login_input"
+        android:backgroundTint="@color/white_10"
         android:hint="비밀번호(영문+숫자6+16자)"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         android:textColorHint="@color/white_20"
         android:textSize="16sp"
+        app:layout_constraintHorizontal_bias="0.8"
+        android:paddingStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pw_label"
-        app:layout_constraintHorizontal_bias="0.044"/>
+        app:layout_constraintTop_toBottomOf="@+id/pw_label"/>
     <ImageView
         android:id="@+id/pw_show"
         android:layout_width="wrap_content"
@@ -99,10 +106,12 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
+        android:background="@drawable/btn_checkbox_background"
+        android:button="@null"
         app:layout_constraintEnd_toStartOf="@+id/autologin"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pw_input"
-        app:layout_constraintHorizontal_bias="0.044"/>
+        app:layout_constraintTop_toBottomOf="@+id/pw_input" />
 
     <TextView
         android:id="@+id/autologin"
@@ -123,6 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="21dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="19dp"
         android:text="이메일 찾기"
         android:textColor="@color/white_50"
@@ -150,8 +160,9 @@
         android:id="@+id/find_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="19dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="19dp"
         android:text="비밀번호 찾기"
         android:textColor="@color/white_50"
@@ -177,10 +188,10 @@
         android:id="@+id/first_login_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/pretendard_bold"
-        android:text="Ttt가 처음이신가요?"
+        android:text="Ttt.가 처음이신가요?"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/signupButton"
         app:layout_constraintHorizontal_bias="0.83"
@@ -192,7 +203,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginBottom="55dp"
         android:fontFamily="@font/pretendard_medium"
         android:text="가입하기"
@@ -211,6 +222,7 @@
         android:text="------------------------ SNS 계정으로 로그인하기 ------------------------"
         app:layout_constraintBottom_toTopOf="@+id/google_login_button"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="center"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/first_login_label"
