--- a/app/src/main/res/layout/activity_preference4.xml
+++ b/app/src/main/res/layout/activity_preference4.xml
@@ -52,15 +52,17 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        android:layout_width="361dp"
-        android:layout_height="209dp"
-        android:layout_marginBottom="16dp"
-        android:foregroundGravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="223dp"
+        android:clipToPadding="false"
+        android:clipChildren="false"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toTopOf="@+id/descriptionText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
+
+
 
     <TextView
         android:id="@+id/descriptionText"
@@ -69,8 +71,8 @@
         android:layout_margin="16dp"
         android:layout_marginBottom="191dp"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textColor="@color/white_80"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/next_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
