--- a/app/src/main/res/layout/activity_bookclub_join.xml
+++ b/app/src/main/res/layout/activity_bookclub_join.xml
@@ -355,7 +355,7 @@
         android:layout_height="46dp"
         android:text="가입하기"
         android:textSize="16sp"
-        android:fontFamily="@font/pretendard_bold"
+        android:fontFamily="@font/pretendard_semibold"
         android:layout_centerHorizontal="true"
         android:background="@drawable/primary_btn_bg"
         android:textColor="@color/button_text_color"
