--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -77,6 +77,7 @@
                 android:layout_height="165dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/img_bookclub_detail"
+                android:elevation="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="40dp"
                 app:layout_constraintStart_toStartOf="parent"
