--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,7 @@
 
         <!-- Toolbar (상단 고정) -->
         <androidx.appcompat.widget.Toolbar
+            android:layout_marginTop="10dp"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,7 +60,7 @@
                     app:layout_constraintEnd_toStartOf="@id/profile_icon"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginEnd="12dp"/>
+                    android:layout_marginEnd="17dp"/>
 
                 <!-- 프로필 아이콘 (오른쪽 끝) -->
                 <ImageView
@@ -97,8 +98,10 @@
                 android:id="@+id/greeting_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginStart="16dp"
                 android:text="안녕하세요, 유저님!\n오늘은 어떤 책을 시작해볼까요?"
+                android:textStyle="bold"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:text="나의 활동"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +122,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="2dp"
                 android:text="이번 달도 Ttt.와 즐거운 독서 라이프 즐겨봐요!"
                 android:textColor="#C2C4C8E0"
                 android:textSize="16sp"
