--- a/app/src/main/res/layout/item_book_image.xml
+++ b/app/src/main/res/layout/item_book_image.xml
@@ -9,7 +9,7 @@
         android:id="@+id/book_cover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
