--- a/app/src/main/res/layout/fragment_bookclub_place.xml
+++ b/app/src/main/res/layout/fragment_bookclub_place.xml
@@ -10,13 +10,13 @@
         android:id="@+id/bookclub_place_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:text="현재 위치"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/pretendard_semibold"
+        android:textColor="@color/colorLabelNormal"
+        android:layout_marginTop="26dp"
+        android:layout_marginStart="20dp"
+        android:textSize="22sp"
+        android:textStyle=""
         app:layout_constraintBottom_toTopOf="@+id/bookclub_place_list_frm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
