--- a/app/src/main/res/layout/fragment_scrap_cancel_custom_toast.xml
+++ b/app/src/main/res/layout/fragment_scrap_cancel_custom_toast.xml
@@ -20,9 +20,9 @@
                 android:text="도서"
                 android:textColor="@android:color/white"
                 android:textSize="15dp"
+                android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
