--- a/app/src/main/res/layout/fragment_bookclub_place.xml
+++ b/app/src/main/res/layout/fragment_bookclub_place.xml
@@ -15,6 +15,7 @@
         android:textColor="@color/colorLabelNormal"
         android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
+        android:layout_marginBottom="10dp"
         android:textSize="22sp"
         android:textStyle=""
         app:layout_constraintBottom_toTopOf="@+id/bookclub_place_list_frm"
